[project]
name = "rocker-stress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrien Morison", email = "adrien.morison@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lazympl>=0.2.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportImplicitOverride = false
reportImportCycles = false
reportUnusedCallResult = false
